# Document-Classifier

./: .gitignore  pyproject.toml
classifier/: cli.py  core.py  dataset.py  display.py  preprocessing.py  reader.py
